--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2 class="item__title">Электрическая игрушка-мышка с дистанционным управлением</h2>
             <div class="item__logos">
               <a href="https://eur.shein.com/ElectricRemoteControlMouseToy,EntertainmentInteractiveCatToysWithFeatherWand,USBRechargeable-p-43925619-cat-2910.html?share_from=null&url_from=GM75739156864&cdn_rsite=cf&ref=www&rep=dir&ret=eur" target="_blank" rel="noopener" class="logo"><img src="images/logo/shein.png" alt="SHEIN"/></a>
-              <a href="https://www.aliexpress.com/item/1005009029500292.html" target="_blank" rel="noopener" class="logo"><img src="images/logo/aliexpress.png" alt="AliExpress"/></a>
+              <a href="https://www.aliexpress.com/item/1005006736543559.html?spm=a2g0o.productlist.main.17.454654c7AKDCrw&algo_pvid=6784df06-0b8c-431c-9bd0-f903abf3e5b0&algo_exp_id=6784df06-0b8c-431c-9bd0-f903abf3e5b0-16&pdp_ext_f=%7B%22order%22%3A%226%22%2C%22eval%22%3A%221%22%2C%22fromPage%22%3A%22search%22%7D&pdp_npi=6%40dis%21EUR%2112.71%217.93%21%21%21102.92%2164.25%21%402103891017610470810595476efb3c%2112000038134399615%21sea%21EE%210%21ABX%211%210%21n_tag%3A-29910%3Bd%3Aa2c61de3%3Bm03_new_user%3A-29895%3BpisId%3A5000000187455135&curPageLogUid=ZLarK3KAqk5R&utparam-url=scene%3Asearch%7Cquery_from%3A%7Cx_object_id%3A1005006736543559%7C_p_origin_prod%3A" target="_blank" rel="noopener" class="logo"><img src="images/logo/aliexpress.png" alt="AliExpress"/></a>
             </div>
           </div>
           <div class="item__media">
